--- a/nm-v1.html
+++ b/nm-v1.html
@@ -402,7 +402,7 @@ h3.section-space-5.mb-center-sm {
       </div>
     </div>
     
-    <div id="errorManager" class="error-message" style="display: none;">Please select a manager.</div>
+    <div id="errorManager" class="error-message" style="display: none;">Please select a Nominee.</div>
 
     <!-- CHIP RATINGS SECTION -->
     <div class="card section-space-40" id="reviews-section">
